displayVideo.php & lectureList altered. dbSubjectList.json - to be altered.

--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,9 @@
 <IfModule mod_rewrite.c>
 	RewriteEngine on
 	Options +FollowSymLinks
-	RewriteRule ^/?DisplayVideo/([a-zA-Z0-9]+)/([a-zA-Z0-9]+)$ displayVideo.php?subjId=$1&lecId=$2
-	RewriteRule ^/?([a-zA-Z0-9]+)/([a-zA-Z0-9]+)/([a-zA-Z0-9]+)$ index.php?a=$1&b=$2&c=$3
+	RewriteRule ^/?DisplayVideo/([a-zA-Z0-9]+)/?$ displayVideo.php?subjId=$1
+	RewriteRule ^/?DisplayVideo/([a-zA-Z0-9]+)/([a-zA-Z0-9]+)/?$ displayVideo.php?subjId=$1&lecId=$2
+	RewriteRule ^/?([a-zA-Z0-9]+)/?$ index.php?dscId=$1
 	RewriteCond %{REQUEST_FILENAME} !-l
 </IfModule>
 
